Fix spacing issue on larger screens

--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -78,20 +78,12 @@
 
 	&#footer-widget-4 {
 		margin: 0 auto;
-		padding: spacing(2) 0;
-		max-width: $size__width--main;
+		padding: spacing(2);
+		max-width: $size__width--main + spacing(2) * 2;
 		display: flex;
 
 		.widget {
 			flex: 1;
-		}
-
-		.widget:nth-of-type(even) {
-			padding-right: spacing(2);
-		}
-
-		.widget:nth-of-type(odd) {
-			padding-left: spacing(2);
 		}
 
 		@media (max-width: $breakpoint-small) {
@@ -99,8 +91,6 @@
 
 			.widget {
 				text-align: left;
-				padding-right: spacing(2);
-				padding-left: spacing(2);
 
 				+ .widget {
 					margin-top: spacing(1);
